--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,44 @@
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
+
+.nav-content {
+  margin: 0 auto;
+  display: flex;
+}
+
+.search {
+  height: 28px;
+  border-radius: 5px;
+}
+
+.fa-xs {
+  font-size: 0.7em;
+  color: #a5a7aa;
+}
+
+.search > input {
+  outline: none;
+  border: none;
+}
+
+.icon-profile {
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  border: 1px solid #262626;
+  border-radius: 25px;
+  padding: 2px 2px;
+}
+
+.icon-profile > span > img {
+  width: 22px;
+  height: 22px;
+  border-radius: 50px;
+}
+
 .post-list {
   display: grid;
   grid-template-columns: repeat(3, 300px);
